<resources>
    <string name="app_name">PST</string>
    <string name="texto_item_default">TESTE</string>
    <string name="texto_menu_principal">PRINCIPAL</string>
    <string name="texto_senha">SENHA:</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_canc">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_padrao_cancelar">CANC.</string>
    <string name="texto_colab">MATRIC. COLABORADOR:</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="texto_titulo_observador">OBSERVADOR</string>
    <string name="texto_observador">19759 - ANDERSON DA SILVA DELGADO</string>
    <string name="texto_padrao_editar">EDITAR</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="texto_padrao_avancar">AVANÇAR</string>
    <string name="texto_titulo_area">ÁREA</string>
    <string name="texto_titulo_sub_area">SUBÁREA</string>
    <string name="texto_atualizar">ATUALIZAR</string>
    <string name="texto_padrao_retorna">RETORNAR</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_turno">TURNO</string>
    <string name="texto_extensao">EXTENSÃO (EM MINUTOS):</string>
    <string name="texto_pessoas_cont">PESSOAS CONTATADAS:</string>
    <string name="texto_pessoas_obs">PESSOAS OBSERVADAS:</string>
    <string name="texto_seguro">SEGURO</string>
    <string name="texto_inseguro">INSEGURO</string>
    <string name="texto_comentario">COMENTÁRIO</string>
    <string name="texto_foto">FOTO</string>
    <string name="texto_capturar">CAPTURAR</string>
    <string name="texto_funcionario">MATRÍCULA:</string>
    <string name="texto_padrao_alterar">ALTERAR</string>
    <string name="texto_titulo_comentario">COMENTARIO</string>
    <string name="texto_titulo_questao">QUESTÃO</string>
    <string name="texto_cancelar_abord">CANCELAR ABORD.</string>
    <string name="texto_nro_aparelho_config">NRO APARELHO:</string>
    <string name="texto_atualizar_dados">ATUALIZAR DADOS</string>
</resources>
