<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetalhesActivity">

    <TextView
        android:id="@+id/textViewExtensao"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_extensao" />

    <EditText
        android:id="@+id/editTextExtensao"
        style="@style/EditView"
        android:inputType="number">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewPessoasCont"
        style="@style/TextView"
        android:text="@string/texto_pessoas_cont" />

    <EditText
        android:id="@+id/editTextPessoasCont"
        style="@style/EditView"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/textViewPessoasObs"
        style="@style/TextView"
        android:text="@string/texto_pessoas_obs" />

    <EditText
        android:id="@+id/editTextPessoasObs"
        style="@style/EditView"
        android:inputType="number" >
    </EditText>

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonRetDetalhes"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_retornar" />

        <Button
            android:id="@+id/buttonAvancaDetalhes"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_avancar" />

    </LinearLayout>

</LinearLayout>