<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComentarioActivity">

    <TextView
        android:id="@+id/textViewComentario"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_comentario" />

    <RadioGroup
        android:id="@+id/radioGroupSegInseg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton android:id="@+id/radioButtonSeguro"
            style="@style/TextViewItemList"
            android:text="@string/texto_seguro"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <RadioButton android:id="@+id/radioButtonInseguro"
            style="@style/TextViewItemList"
            android:text="@string/texto_inseguro"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextComentario"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:gravity="top|left"
        android:maxLines="3"
        android:maxLength="400"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical">
    </EditText>

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonRetComentario"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_retornar" />

        <Button
            android:id="@+id/buttonAvancaComentario"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_avancar" />

    </LinearLayout>

</LinearLayout>