<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:id="@+id/layoutPrinc"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="2dp" >

            <TextView
                android:id="@+id/textViewDescrQuestao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fonte_tit_card"
                android:textColor="#000000"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/texto_item_list" />

            <LinearLayout
                android:id="@+id/layoutDescrTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewInseg"
                    android:textSize="@dimen/fonte_item_card"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_inseguro" />

                <TextView
                    android:id="@+id/textViewSeg"
                    android:textSize="@dimen/fonte_item_card"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_seguro" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutQtdeTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editTextQtdeSeg"
                    android:textSize="@dimen/fonte_item_card"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number">
                </EditText>

                <EditText
                    android:id="@+id/editTextQtdeInseg"
                    android:textSize="@dimen/fonte_item_card"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" >
                </EditText>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>